force-app/main/default/objects/UT_Simple_Invoice__c/UT_Simple_Invoice__c.object-meta.xml
<CustomObject>
    <label>Simple Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Simple Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simple Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>