force-app/main/default/objects/UT_Simple_Invoice__c/fields/UT_Attendee__c.field-meta.xml
<CustomField>
    <fullName>UT_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Simple Invoices</relationshipLabel>
    <relationshipName>Simple_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>