force-app/main/default/objects/UT_Simple_Invoice__c/fields/UT_Related_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>UT_Related_Event_Id__c</fullName>
    <label>Related Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>