force-app/main/default/objects/UT_Simple_Invoice__c/fields/UT_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>UT_Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>