force-app/main/default/objects/UT_Simple_Invoice__c/fields/UT_Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>UT_Total_Amount_Due__c</fullName>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>