force-app/main/default/objects/UT_Simple_Invoice__c/fields/UT_Training_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>UT_Training_Date_Formatted__c</fullName>
    <label>Training Date Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>