force-app/main/default/objects/UT_Simple_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UT_Attendee__c</columns>
    <columns>UT_Training_Received__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UT_Related_Event_Id__c</columns>
    <columns>UT_Start_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>